modify some links

--- a/startpage.html
+++ b/startpage.html
@@ -16,16 +16,16 @@
 				<div id="links">
 				<ul class="main">
 					<li>main</li>
-					<li><a href="https://kopri.mooo.com">my_blog</a><li>
-					<li><a href="mailto:kopri@unixhub.com">email_me</a><li>
-					<li><a href="https://github.com/kopri-nb">my_git</a><li>
-					<li><a href="https://paste.xinu.at/Q0cP">public.pgp</a><li>
+					<li><a href="https://inbox.google.com">inbox</a><li>
+					<li><a href="https://github.com/">github</a><li>
+					<li><a href="https://www.linkedin.com/">linkedin</a><li>
+					<li><a href="">public.pgp</a><li>
 				</ul>
 				<ul class="unix">
-					<li>unix</li>
-					<li><a href="http://distrowatch.com/">distrowatch</a><li>
-					<li><a href="http://bsd.org">docs/bsd</a><li>
-					<li><a href="http://tldp.org">docs/linux</a><li>
+					<li>school</li>
+					<li><a href="https://app.mystudylife.com/dashboard">mystudylife</a><li>
+					<li><a href="https://portal.utoronto.ca">blackboard</a><li>
+					<li><a href="https://acorn.utoronto.ca">acorn</a><li>
 					<li><a href="https://www.freshports.org">docs/ports</a><li>
 				</ul>
 				<ul class="utils">
@@ -37,12 +37,12 @@
 				</ul>
 				<ul class="forums">
 					<li>forums</li>
-					<li><a href="https://4chan.org">4chan</a><li>
-					<li><a href="https://news.ycombinator.com">hacker_news</a><li>
 					<li><a href="https://pay.reddit.com">reddit</a><li>
-					<li><a href="http://unixhub.net">unixhub</a><li>
+					<li><a href="https://4chan.org">4chan</a><li>
+					<li><a href="http://tumblr.com">tumblr</a><li>
+					<li><a href="https://news.ycombinator.com">hacker_news</a><li>
 				</ul>
-				<ul class="gfx">
+				<ul class="watch">
 					<li>gfk</li>
 					<li><a href="http://deviantart.com">DA</a><li>
 					<li><a href="http://dotshare.it">dotshare</a><li>
