update more links

--- a/startpage.html
+++ b/startpage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 	<meta charset="utf-8" />
-	<title>Start page</title>
+	<title>root</title>
 	<link rel="stylesheet" href="style/style.less" type="text/less" />
 	<script src="js/less.js" type="text/javascript"></script>
 	<script src="js/jquery-1.9.1.js" type="text/javascript"></script>
@@ -19,14 +19,14 @@
 					<li><a href="https://inbox.google.com">inbox</a><li>
 					<li><a href="https://github.com/">github</a><li>
 					<li><a href="https://www.linkedin.com/">linkedin</a><li>
-					<li><a href="">public.pgp</a><li>
+					<li><a href="https://twitter.com/">twitter</a><li>
 				</ul>
 				<ul class="unix">
 					<li>school</li>
 					<li><a href="https://app.mystudylife.com/dashboard">mystudylife</a><li>
 					<li><a href="https://portal.utoronto.ca">blackboard</a><li>
 					<li><a href="https://acorn.utoronto.ca">acorn</a><li>
-					<li><a href="https://www.freshports.org">docs/ports</a><li>
+					<li><a href="https://piazza.com/">piazza</a><li>
 				</ul>
 				<ul class="utils">
 					<li>utils</li>
@@ -42,10 +42,10 @@
 					<li><a href="http://tumblr.com">tumblr</a><li>
 					<li><a href="https://news.ycombinator.com">hacker_news</a><li>
 				</ul>
-				<ul class="watch">
-					<li>gfk</li>
-					<li><a href="http://deviantart.com">DA</a><li>
-					<li><a href="http://dotshare.it">dotshare</a><li>
+				<ul class="gfk">
+					<li>watch</li>
+					<li><a href="https://www.youtube.com">youtube</a><li>
+					<li><a href="https://www.twitch.tv/">twitch</a><li>
 					<li><a href="http://simpledesktops.com/">simpledesktops</a><li>
 					<li><a href="http://wallbase.cc/home">wallbase.sh</a><li>
 				</ul>
